--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ body {
 /* Ajustes responsivos para pantallas más pequeñas */
 @media (max-width: 768px) {
     .hero {
-        height: 80vh;
+        height: 70vh;
     }
 
     .hero-background {
@@ -394,8 +394,8 @@ body {
 
     @media (max-width: 768px) {
         .episodios {
-            grid-template-columns: repeat(1, 1fr);
-            width: 90%;
+            grid-template-columns: repeat(2, 1fr);
+            width: 95%;
             padding: 10px;
         }
 
@@ -406,4 +406,45 @@ body {
         .episodio p {
             font-size: 10px;
         }
+
+        .preview-container img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
     }
+    .capitulo {
+        background-color: #1c1c1c;
+        padding: 20px;
+        border-radius: 10px;
+        margin: 20px 0;
+        color: #fff;
+    }
+    
+    .capitulo-titulo {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    
+    .capitulo-descripcion {
+        font-size: 16px;
+        margin-bottom: 20px;
+        color: #ccc;
+    }
+    
+    .video-container {
+        width: 100%;
+        max-width: 640px;
+        margin: 0 auto;
+        border: 2px solid #f7c02b;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    
+    .video {
+        width: 100%;
+        height: 360px;
+        object-fit: cover;
+    }
+    
